Fix css overlap

--- a/arabic.css
+++ b/arabic.css
@@ -36,7 +36,7 @@ h1 {
 p, a {
   font-family:'Scheherazade';
   text-align: justify;
-  text-decoration: none;
+  text-decoration: none !important;
   color: black;
   direction: rtl;
 }
